force-app/main/default/objects/BB_Tool__c/BB_Tool__c.object-meta.xml
<CustomObject>
    <description>A Blackbaud tool from the A2R/I2R inventory, linked to the capability it serves. Grounds the agent on "what tooling do we run".</description>
    <label>BB Tool</label>
    <pluralLabel>BB Tools</pluralLabel>
    <nameField><label>Tool Name</label><type>Text</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>