force-app/main/default/objects/BB_Tool__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <description>The capability this tool maps to.</description>
    <label>Capability</label>
    <referenceTo>BB_Capability__c</referenceTo>
    <relationshipLabel>Tools</relationshipLabel>
    <relationshipName>Tools</relationshipName>
    <type>Lookup</type><deleteConstraint>SetNull</deleteConstraint>
</CustomField>