force-app/main/default/objects/BB_Tool__c/fields/Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amount__c</fullName>
    <description>Annual contract value for this tool, captured during the review.</description>
    <label>Contract Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>