force-app/main/default/objects/BB_Tool__c/fields/Contract_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Contract_Maturity__c</fullName>
    <description>Contract maturity / renewal date for this tool, captured during the review.</description>
    <label>Contract Maturity</label>
    <type>Date</type>
</CustomField>