force-app/main/default/objects/BB_Tool__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName><externalId>true</externalId>
    <description>Slug of the tool name (+ capability) ; upsert key.</description>
    <label>External Id</label><length>120</length><required>true</required><type>Text</type><unique>true</unique>
</CustomField>