force-app/main/default/objects/BB_Tool__c/fields/Overlaps_SF__c.field-meta.xml
<CustomField>
    <fullName>Overlaps_SF__c</fullName>
    <description>True when the parent capability aligns to Salesforce (native/integrates/data360/partial).</description>
    <label>Overlaps Salesforce</label><type>Checkbox</type><defaultValue>false</defaultValue>
</CustomField>