force-app/main/default/objects/BB_Tool__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Blackbaud's rationalization priority for this tool, captured during the review.</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>