force-app/main/default/objects/BB_Tool__c/fields/Retire_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Retire_Candidate__c</fullName>
    <description>True when this tool is a candidate to retire by activating an owned Salesforce entitlement.</description>
    <label>Retire Candidate</label><type>Checkbox</type><defaultValue>false</defaultValue>
</CustomField>