force-app/main/default/objects/BB_Tool__c/fields/Sub_Capability__c.field-meta.xml
<CustomField>
    <fullName>Sub_Capability__c</fullName>
    <description>Parent capability sub-capability name.</description>
    <label>Sub Capability</label><length>120</length><type>Text</type><unique>false</unique>
</CustomField>