force-app/main/default/objects/BB_Tool__c/fields/Users__c.field-meta.xml
<CustomField>
    <fullName>Users__c</fullName>
    <description>Number of users / seats on this tool, captured during the review.</description>
    <label>Users</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>